--- a/AtmEmpresaConsultoria/app/src/main/res/values/strings.xml
+++ b/AtmEmpresaConsultoria/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AtmEmpresaConsultoria</string>
+    <string name="title_activity_empresa">EmpresaActivity</string>
+    <string name="empresa_detalhes">Sobre a empresa</string>
 </resources>
